solved z-index map and popup problem

--- a/src/main/webapp/desktopView/TagAPrice.css
+++ b/src/main/webapp/desktopView/TagAPrice.css
@@ -73,7 +73,7 @@ a:HOVER{
 
 .center {
     text-align:left;
-    width: 870px;    
+    width: 950px;    
 }
 
 .stdframe{
